[package]
name = "amber_light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
canvy = "0.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
canvy = "0.1.0"
nannou = "0.18.1"

