[package]
name = "amber_light"
version = "0.1.0"
edition = "2021"
authors = ["Anuar <anuarsaenger.2001@gmail.com>"]
description = "A crate built on canvy that implements a decorative fireplace animation"
repository = "https://github.com/Ripred100/amber_light"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
canvy = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
canvy = "0.2.5"
nannou = "0.18.1"

